--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply leading-[normal] m-0;
+}
+
+*,
+::before,
+::after {
+  border-width: 0;
+}
+
+img {
+  border: 0;
+}
 
 :root {
   --space-0: 0;
@@ -53,13 +70,6 @@
 
   --max-width-0: 320px;
   --max-width-1: 768px;
-}
-
-html {
-  background-color: var(--white);
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  text-size-adjust: 100%;
 }
 
 /* Post page */
