--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,12 @@ body {
   @apply leading-[normal] m-0;
 }
 
+body {
+  overflow-x: hidden;
+  position: relative;
+  background: linear-gradient(180deg, #000b0c 4.28%, #002023 6.69%, #002023);
+}
+
 img {
   border: 0;
 }
@@ -101,6 +107,7 @@ html {
 
 .swiper-pagination-bullet-active {
   background: white !important;
+  margin-top: 5rem;
 }
 
 .tab {
@@ -111,7 +118,6 @@ html {
 
 .tabs {
   border-bottom: 1px #84f3ff solid;
-  
 }
 
 .bg-foreground {
@@ -120,13 +126,41 @@ html {
   background-color: #84f3ff;
 }
 
-.group[data-selected=true] .group-data-\[selected\=true\]\:text-foreground {
+.group[data-selected='true'] .group-data-\[selected\=true\]\:text-foreground {
   color: #84f3ff !important;
 }
 
-body {
-  overflow-x: hidden;
-  position: relative;
-  height: 700rem;
-  background:linear-gradient(180deg, #000b0c 4.28%, #002023 6.69%, #002023)
+.experiences {
+  background: linear-gradient(
+    331deg,
+    #4dd9e6 -86.29%,
+    #4dd9e6 -86.27%,
+    #001c3a 97.6%
+  );
+}
+
+.dust {
+  background-image: url('../assets/bg_reloj_arena.png');
+  width: 100%;
+  height: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.skills {
+  display: flex;
+  width: 100%;
+  padding: 84px 32px 64px 32px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 64px;
+  border-radius: 200px 200px 0px 0px;
+  background: linear-gradient(148deg, #ffe083 19.29%, #e8c349 126.15%);
+}
+
+@media (min-width: 1024px) { 
+  .skills {
+    border-radius: 65% 65% 0px 0px;
+  }
 }
