--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,6 +78,7 @@ html {
   box-sizing: border-box;
   font-family: var(--font-family-sans);
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -164,4 +165,31 @@ html {
   .skills {
     border-radius: 65% 65% 0px 0px;
   }
+}
+
+.image-container {
+    transition: transform 0.5s ease; /* Ajusta la duración y la función de aceleración según tus preferencias */
+}
+
+.image-container:hover {
+  transform: scale(0.9); /* Ajusta el valor de escala según tus preferencias */
+}
+
+.progressBarContainer {
+  grid-area: slider;
+  text-align: center;
+  margin-top: 1px;
+  padding: 1px;
+  font-size: 0.5em;
+}
+
+.progressBar {
+  width: 80%;
+  cursor: pointer;
+  height: 1px;
+  color: rgb(0, 0, 0, 1);
+}
+
+input[type="range"]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
