--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,56 +22,7 @@ img {
 }
 
 :root {
-  --space-0: 0;
-  --space-1: 4px;
-  --space-2: 8px;
-  --space-3: 12px;
-  --space-4: 20px;
-  --space-5: 32px;
-  --space-6: 52px;
-  --space-7: 84px;
-  --space-8: 136px;
-  --space-9: 220px;
-
   --font-family-sans: Inter;
-  --font-family-serif: PT Serif;
-  --font-family-mono: IMB Plex Mono;
-
-  --font-size-0: 12px;
-  --font-size-1: 14px;
-  --font-size-2: 16px;
-  --font-size-3: 18px;
-  --font-size-4: 20px;
-  --font-size-5: 24px;
-  --font-size-6: 30px;
-  --font-size-7: 36px;
-  --font-size-8: 48px;
-  --font-size-9: 60px;
-  --font-size-10: 72px;
-
-  --line-height-0: 16px;
-  --line-height-1: 20px;
-  --line-height-2: 24px;
-  --line-height-3: 28px;
-  --line-height-4: 28px;
-  --line-height-5: 32px;
-  --line-height-6: 36px;
-  --line-height-7: 40px;
-  --line-height-8: 48px;
-  --line-height-9: 60px;
-  --line-height-10: 72px;
-  --line-height-11: 96px;
-  --line-height-12: 128px;
-
-  --white: #fff;
-  --black: #101112;
-  --gray-200: #ced2d9;
-  --gray-600: #6e7683;
-  --blue-600: #1e61cd;
-  --magenta-100: #f9d7eb;
-
-  --max-width-0: 320px;
-  --max-width-1: 768px;
 }
 
 html {
@@ -107,9 +58,83 @@ html {
   }
 }
 
-.swiper-pagination-bullet-active {
-  background: white !important;
-  margin-top: 5rem;
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 1rem !important;
+  font-weight: 700 !important;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  top: auto !important;
+  bottom: 0px !important;
+  color: white !important;
+  background-color: #006971 !important;
+  border-radius: 100% !important;
+  padding: 0 20px !important;
+  height: 40px !important;
+}
+
+.swiper-button-next {
+  right: 9rem !important;
+}
+.swiper-button-prev {
+  left: 9rem !important;
+}
+
+
+@media (min-width: 768px) {
+  .swiper-button-next {
+    right: 13rem !important;
+  }
+  .swiper-button-prev {
+    left: 12rem !important;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    bottom: 0rem !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  .swiper-button-next {
+    right: 19rem !important;
+  }
+  .swiper-button-prev {
+    left: 20rem !important;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    bottom: 0rem !important;
+  }
+}
+
+@media (min-width: 1280px) {
+  .swiper-button-next {
+    right: 22rem !important;
+  }
+  .swiper-button-prev {
+    left: 25rem !important;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    bottom: 50px !important;
+  }
+}
+
+@media (min-width: 1440px) {
+  .swiper-button-next {
+    right: 20rem !important;
+  }
+  .swiper-button-prev {
+    left: 20rem !important;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    bottom: 0rem !important;
+  }
 }
 
 .tab {
@@ -161,33 +186,33 @@ html {
   background: linear-gradient(148deg, #ffe083 19.29%, #e8c349 126.15%);
 }
 
-@media (min-width: 1024px) { 
+@media (min-width: 1024px) {
   .skills {
     border-radius: 65% 65% 0px 0px;
   }
 }
 
 .image-container {
-    transition: transform 0.5s ease; /* Ajusta la duración y la función de aceleración según tus preferencias */
+  transition: transform 0.5s ease; /* Ajusta la duración y la función de aceleración según tus preferencias */
 }
 
 .image-container:hover {
   transform: scale(0.9); /* Ajusta el valor de escala según tus preferencias */
 }
 
-input[type="range"]:focus {
+input[type='range']:focus {
   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
 
 @keyframes fadeInOpacity {
   0% {
-      opacity: 0;
+    opacity: 0;
   }
   50% {
-      opacity: 0.5;
+    opacity: 0.5;
   }
   100% {
-      opacity: 1;
+    opacity: 1;
   }
 }
 
